# apt_browser

./: README.md  dev-requirements.txt  pyproject.toml
src/apt_browser/: __init__.py  app.py
